# CBCTAlign

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install_dependencies.sh
src/: main.cpp
src/core/: CBCTVolume.cpp  CBCTVolume.h  CephalometricDetector.cpp  CephalometricDetector.h  LandmarkIO.cpp  LandmarkIO.h  PipelineManager.cpp  PipelineManager.h  RigidRegistration.cpp  RigidRegistration.h  SliceExtractor.cpp  SliceExtractor.h  SliceNormalizer.cpp  SliceNormalizer.h  SlicePlaneCalculator.cpp  SlicePlaneCalculator.h  ValidationMetrics.cpp  ValidationMetrics.h
src/gui/: ComparisonWidget.cpp  ComparisonWidget.h  LandmarkAnnotationWidget.cpp  LandmarkAnnotationWidget.h  LandmarkEditor.cpp  LandmarkEditor.h  MainWindow.cpp  MainWindow.h  ProgressDialog.cpp  ProgressDialog.h  SliceViewer2D.cpp  SliceViewer2D.h  VolumeViewer3D.cpp  VolumeViewer3D.h
src/utils/: FileIO.cpp  FileIO.h  Logger.cpp  Logger.h  MathUtils.cpp  MathUtils.h
tests/: CMakeLists.txt
