# tests/CMakeLists.txt
cmake_minimum_required(VERSION 3.16)

# Tests unitaires (à développer)
# find_package(GTest REQUIRED)
# 
# add_executable(test_cbctalign
#     test_main.cpp
#     test_volume.cpp
#     test_registration.cpp
#     test_landmarks.cpp
#     test_metrics.cpp
# )
# 
# target_link_libraries(test_cbctalign GTest::gtest_main)
# add_test(NAME CBCTAlignTests COMMAND test_cbctalign)

message(STATUS "Tests: placeholder (à développer)")
